bin/tests/snapshots/deprecated_to_path__babcf3ca5fe7ee69b692a0e6ccfbfdf4_lint_errfmt.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath "/abc/def"
---
<temp_file_path>>1:1:W:17:[deprecated_to_path] `toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more
