bin/tests/snapshots/deprecated_to_path__babcf3ca5fe7ee69b692a0e6ccfbfdf4_lint_json.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath "/abc/def"
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "deprecated_to_path",
      "note": "Found usage of deprecated builtin toPath",
      "code": 17,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 18
            }
          },
          "message": "`toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
