bin/tests/snapshots/deprecated_to_path__fix_174dc0d1d9e78fd30b854475b82a991795814e0bfc6a3fc90f46e7370f2f63dc.snap
---
source: bin/tests/deprecated_to_path.rs
expression: snapshot
---
expression:
builtins.toPath "/some/path"
---
