bin/tests/snapshots/deprecated_to_path__fix_b7ca5bc4bbe1fe57468d47f2df8fac29361ae090a84ea6afdea842170517ae14.snap
---
source: bin/tests/deprecated_to_path.rs
expression: snapshot
---
expression:
builtins.toPath x
---
