bin/tests/snapshots/deprecated_to_path__fix_babcf3ca5fe7ee69b692a0e6ccfbfdf4f08823229d054ee85af87dc3d52d41ea.snap
---
source: bin/tests/deprecated_to_path.rs
expression: snapshot
---
expression:
toPath "/abc/def"
---
