bin/tests/snapshots/deprecated_to_path__lint_3becd19d67f828a750a82e268e4f3ebae0d5f30d8493e1ef6533e61ac036af3d.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath x

---
[W17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ toPath x
   · ────┬───  
   ·     ╰───── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
