bin/tests/snapshots/deprecated_to_path__lint_3ee8e3ba49a8f611587af9fc50d6e5b3aab370999a2af59dfc3a540cf73c90e3.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath "/some/path"

---
[W17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ builtins.toPath "/some/path"
   · ──────────────┬─────────────  
   ·               ╰─────────────── builtins.toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
