bin/tests/snapshots/deprecated_to_path__lint_4f2c5321b7dbd2171c77729c879745a1f6209972b4a9d367bd5fb41a83c42e99.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath x
---
[W17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ toPath x
   · ────┬───  
   ·     ╰───── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
