bin/tests/snapshots/deprecated_to_path__lint_75081bbbc563375397cb289555d0e2a2e428cb326ee74271e95253e0a3d49941.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath "/abc/def"

---
[W17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ toPath "/abc/def"
   · ────────┬────────  
   ·         ╰────────── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
